# os_in_rust

./: .gitignore  Cargo.toml  README.md  shell.nix
.cargo/: config.toml
boot/: Cargo.toml
boot/src/: main.rs
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  print.rs  serial.rs  tests.rs  text_display.rs
src/task/: executor.rs  keyboard.rs  simple_executor.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
