[package]
name = "os_in_rust"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "boot",
]

[[test]]
name = "stack_overflow"
harness = false

[[test]]
name = "should_panic"
harness = false

[dependencies]
bootloader = "0.10.12"
noto-sans-mono-bitmap = { version = "0.1.2", default-features = false, features = ["regular", "size_14"] }
x86_64 = "0.14.10"
uart_16550 = "0.2.18"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
pic8259 = "0.10.2"
spin = "0.9.4"
pc-keyboard = "0.5.1"
linked_list_allocator = "0.10.4"
crossbeam = { version = "0.8.2", default-features = false, features = ["alloc"] }
conquer-once = { version = "0.3.2", default-features = false }
futures-util = { version = "0.3.25", default-features = false, features = ["alloc"] }

[package.metadata.bootloader]
map-physical-memory = true
